# yocto-build-project

./: README.md
yocto_lib/: Application.cpp  Application.h  CMakeLists.txt  install.sh  main.cpp
yocto_lib/lib-display/: CMakeLists.txt  display.h
yocto_lib/lib-win/: CMakeLists.txt  window.cpp  window.h
yocto_lib/lib-win/common/: rect.h
